# naaulu

./: .gitignore  README.md  build.py  build_data.py  install.ps1  install.sh  pyproject.toml  test.sh  vcpkg.json
.woodpecker/: test.yml
naaulu/: config.py  errors.py  estimation.py  gauge.py  geography.py  multi.py  network.py  precip.py  radar.py  util.py  verification.py  visual.py
naaulu/cli/: __init__.py  clean.py  combine.py  estimate.py  export.py  list.py  plot.py  set.py  verify.py
naaulu/data/: chmi_aws_stations.json  networks.json  radars.json  radars_opera.json  radars_usa.json
naaulu/providers/: abm.py  chmi.py  dwd.py  estea.py  fmi.py  iem.py  knmi.py  mf.py  naaulu.py  noaa.py  opera.py  rmib.py  spw.py  vmm.py
tests/: conftest.py  test_gauge_providers.py  test_precip.py  test_radar.py  test_radar_providers.py
tests/unit/: test_gauge_registry.py  test_util.py
